--- a/src/main/webapp/cabecalho.zul
+++ b/src/main/webapp/cabecalho.zul
@@ -1,4 +1,4 @@
-<div hflex="1" vflex="1" sclass="banner" >
+<div hflex="1" vflex="1" sclass="banner">
 	<hbox hflex="1" vflex="1" align="center">
 
 
@@ -8,40 +8,41 @@
 		<div width="250px">
 			<label value="Projeto HydroNode" sclass="banner-head-menor" />
 		</div>
+		<hlayout>
+			<menubar id="menubar" width="100%" sclass="meu-menubar"
+				autodrop="true">
+				<menu label="Componentes">
+					<menupopup>
+						<menuitem label="Sensores"
+							image="/imagens/menubar/sensor.png"
+							onClick="Executions.sendRedirect(&quot;/swe/sensor/&quot;)" />
+						<menuitem label="Estações"
+							image="/imagens/menubar/estacao.png"
+							onClick="Executions.sendRedirect(&quot;/swe/estacao/&quot;)" />
+						<menuitem label="Propriedades Observadas"
+							image="/imagens/menubar/propriedade.png"
+							onClick="Executions.sendRedirect(&quot;/swe/sensor/&quot;)" />
+						<menuitem label="Características"
+							image="/imagens/menubar/caracteristica.png"
+							onClick="Executions.sendRedirect(&quot;/swe/sensor/&quot;)" />
+					</menupopup>
+				</menu>
 
-		<menubar id="menubar" width="100%" sclass="meu-menubar"
-			autodrop="true">
-			<menu label="Componentes">
-				<menupopup>
-					<menuitem label="Sensores"
-						image="/imagens/menubar/sensor.png"
-						onClick="Executions.sendRedirect(&quot;/swe/sensor/&quot;)" />
-					<menuitem label="Estações"
-						image="/imagens/menubar/estacao.png"
-						onClick="Executions.sendRedirect(&quot;/swe/estacao/&quot;)" />
-					<menuitem label="Propriedades Observadas"
-						image="/imagens/menubar/propriedade.png"
-						onClick="Executions.sendRedirect(&quot;/swe/sensor/&quot;)" />
-					<menuitem label="Características"
-						image="/imagens/menubar/caracteristica.png"
-						onClick="Executions.sendRedirect(&quot;/swe/sensor/&quot;)" />
-				</menupopup>
-			</menu>
+				<menu label="Operações">
+					<menupopup>
+						<menuitem label="Inserir Sensor"
+							href="/hydroserver/insertSensor.zul"
+							image="/imagens/menubar/inserir_sensor.png"
+							onClick="Executions.sendRedirect(&quot;/hydroserver/insertSensor.zul&quot;)" />
+						<menuitem label="Inserir Observação"
+							href="/hydroserver/insertObservation.zul"
+							image="/imagens/menubar/inserir_observacao.png"
+							onClick="Executions.sendRedirect(&quot;/hydroserver/insertObservation.zul&quot;)" />
 
-			<menu label="Operações">
-				<menupopup>
-					<menuitem label="Inserir Sensor"
-						href="/hydroserver/insertSensor.zul"
-						image="/imagens/menubar/inserir_sensor.png"
-						onClick="Executions.sendRedirect(&quot;/hydroserver/insertSensor.zul&quot;)" />
-					<menuitem label="Inserir Observação"
-						href="/hydroserver/insertObservation.zul"
-						image="/imagens/menubar/inserir_observacao.png"
-						onClick="Executions.sendRedirect(&quot;/hydroserver/insertObservation.zul&quot;)" />
-
-				</menupopup>
-			</menu>
-		</menubar>
+					</menupopup>
+				</menu>
+			</menubar>
+		</hlayout>
 		<hbox hflex="1" vflex="1" pack="end" align="end">Anônimo</hbox>
 	</hbox>
 </div>
