--- a/src/main/webapp/cabecalhoGrande.zul
+++ b/src/main/webapp/cabecalhoGrande.zul
@@ -6,7 +6,7 @@
 			width="90px" />
 
 		<div width="400px">
-			<label value="Projeto HydroNode" sclass="banner-head" />
+			<label value="Sistema HydroNode" sclass="banner-head" />
 		</div>
 	</hbox>
 </div>
