--- a/src/main/webapp/swe/estacao/index.zul
+++ b/src/main/webapp/swe/estacao/index.zul
@@ -8,7 +8,18 @@
 			<vbox vflex="1" hflex="1" align="center" spacing="20px"
 				sclass="demo-main">
 
-				<label value="Index da estação" sclass="head1" />
+				<div sclass="borda-azul">
+					<gmaps id="mapa" height="590px" width="1000px"
+						showSmallCtrl="true">
+						<gmarker id="marker1" lat="-21.7776373"
+							lng="-43.4115264" />
+						<gmarker id="marker2" lat="-21.7781902"
+							lng="-43.4157965" />
+
+						<gmarker id="marker3" lat="-21.7810894"
+							lng="-43.4118268" />
+					</gmaps>
+				</div>
 
 
 			</vbox>
